1.预留强制退出标志位

--- a/runtime-permission/src/main/res/values/strings.xml
+++ b/runtime-permission/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PermissionAPI</string>
+    <string name="rationale_msg">当前操作必须要 %1$s 权限，请在设置页开启</string>
 </resources>
